--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             cd ./src
             ls
 
-            dotnet pack Template.proj --no-build --no-dependencies --no-restore --force -p:Version=$APP_VERSION
+            dotnet pack Template.proj --no-build --no-dependencies --force -p:Version=$APP_VERSION
 
             mkdir ./../nupkgs
             mv **/bin/**/*.nupkg ./../nupkgs
