--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,21 @@ jobs:
                   
 workflows:
   version: 2
+  
+  release:
+    jobs:
+      - setup:
+          filters:
+            tags:
+              only: /^v?\d\.\d\.\d/
+       - build:
+          requires:
+            - setup
+      - publish:
+          context: build-ctx
+          requires:
+            - build
+  
   build_and_publish:
     jobs:
       - setup:
