--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,13 @@ jobs:
             
             cp ./semver/nuget.txt ./semver/version.txt
             
-            if [[ $BRANCH == "\"(no branch)\"" ]]; then echo "tagged release"; cp ./semver/mmp.txt ./semver/version.txt; fi;
+            if [[ $BRANCH == "\"(no branch)\"" ]]; 
+            then 
+              echo "tagged release";
+              export V=\"$(git describe --tags --abbrev=0)\"
+              echo $V
+              echo $V > ./semver/version.txt
+            fi;
 
             cat ./semver/version.txt
             
